# task-space

./: .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
data/arm26/: arm26_ideal_muscles.osim
data/bicycle/: bicycle_Kinematics_q.sto  bicycle_backup.xml  bicycle_v07.osim  bicycle_v08.osim  bicycle_v10.osim  bicycle_v11b.osim  gait10dof_Kinematics_Tracking_Tasks.xml  gait10dof_Reserve_Actuators.xml  setup_cmc.xml  setup_so.xml
data/bicycle/bank/: bicycle_v07.osim  bicycle_v09.osim
data/bicycle/with_ankle/: bicycle_v09.osim  gait10dof_Kinematics_Tracking_Tasks.xml  gait10dof_Reserve_Actuators.xml
data/gait_model/: Geometry  gait2392_floor.osim  gait2392_floor_ideal_muscles.osim  lower_limb_floor.osim  lower_limb_floor_ideal_muscles.osim
data/mobl/: mobl_2016.osim  mobl_2016_ideal_muscles.osim  mobl_2016_simplified.osim  mobl_2016_simplified_ideal_muscles.osim
data/mobl/Geometry/: femur.vtp  hand_1mc.vtp  hand_2distph.vtp  hand_2midph.vtp  hand_2proxph.vtp  hand_3distph.vtp  hand_3midph.vtp  hand_3proxph.vtp  hand_4distph.vtp  hand_4midph.vtp  hand_4proxph.vtp  hand_5distph.vtp  hand_5midph.vtp  hand_5proxph.vtp  hand_thumbdist.vtp  hand_thumbprox.vtp  pat.vtp  sdfastPISIFORMw.vtp  sdfastSCAPHOIDw.vtp  sdfastTRIQUETRALw.vtp  sdfast_1seg_hand_fr_c_2mc.vtp  sdfast_1seg_hand_fr_c_3mc.vtp  sdfast_1seg_hand_fr_c_4mc.vtp  sdfast_1seg_hand_fr_c_5mc.vtp  sdfast_1seg_hand_fr_c_hamate.vtp  sdfast_1seg_hand_fr_c_trapezium.vtp  sdfast_1seg_hand_fr_c_trapezoid.vtp
doc/: CMakeLists.txt  Doxyfile.in
scripts/: opensim_importer.py  plot_sto.py
src/: CMakeLists.txt
src/include/: Settings.h.in
src/taskspace/: CMakeLists.txt
src/taskspace/examples/: ExampleAbsoluteCoordinates.cpp  ExampleArm26.cpp  ExampleClosedKinematicChain.cpp  ExampleCycling.cpp  ExamplePerreault2001Experiment.cpp  ExamplePredictiveSimulation.cpp  ExampleTaskBasedControl.cpp  ExampleUpperLimb.cpp  full_body_model.osim  lower_limb_model.osim  lower_limb_model_path.osim  model_02-Scaled_to_subject.osim
src/taskspace/include/: ConstraintProjection.h  InverseDynamicsModel.h  KinematicTask.h  TaskBasedComputedMuscleControl.h  TaskBasedTorqueController.h  TaskDynamics.h  TaskPriorityGraph.h  TaskProjection.h  TaskSpace.h
src/taskspace/include/internal/: TaskSpaceExports.h
src/taskspace/src/: ConstraintProjection.cpp  InverseDynamicsModel.cpp  KinematicTask.cpp  TaskBasedComputedMuscleControl.cpp  TaskDynamics.cpp  TaskPriorityGraph.cpp  TaskProjection.cpp
src/taskspace/tests/: TestTaskProiorityGraph.cpp  TestUtil.h  testTaskPriorityGraph.cpp
task_space/: CMakeLists.txt
task_space/examples/: ExampleAbsoluteCoordinates.cpp  ExampleArm26.cpp  ExampleClosedKinematicChain.cpp  ExampleReaching.cpp  ExampleTaskBasedControl.cpp  arm26.osim  exampleTaskBasedControl.cpp  exampleTaskControl.cpp
task_space/include/: ConstraintProjection.h  InverseDynamicsModel.h  KinematicTask.h  TaskBasedComputedMuscleControl.h  TaskBasedForce.h  TaskBasedTorqueController.h  TaskDynamics.h  TaskManager.h  TaskPriorityGraph.h  TaskProjection.h  TaskSpace.h
task_space/src/: ConstraintProjection.cpp  InverseDynamicsModel.cpp  KinematicTask.cpp  TaskBasedComputedMuscleControl.cpp  TaskBasedForce.cpp  TaskBasedTorqueController.cpp  TaskDynamics.cpp  TaskManager.cpp  TaskPriorityGraph.cpp  TaskProjection.cpp
task_space/test/: testTask.cpp  testTemplate.cpp
task_space/tests/: TestUtil.h  testTask.cpp
task_space_projection/: CMakeLists.txt
task_space_projection/include/: KinematicTask.h
